--- a/cassandra/pom.xml
+++ b/cassandra/pom.xml
@@ -64,6 +64,7 @@
     <plugins>
       <plugin>
         <artifactId>maven-shade-plugin</artifactId>
+        <version>3.0.0</version>
         <executions>
           <execution>
             <phase>package</phase>
