--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
   <groupId>io.zipkin.brave.cassandra</groupId>
   <artifactId>brave-cassandra-parent</artifactId>
-  <version>0.1.1</version>
+  <version>0.1.2-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <modules>
@@ -65,7 +65,7 @@
     <url>https://github.com/openzipkin/brave-cassandra</url>
     <connection>scm:git:https://github.com/openzipkin/brave-cassandra.git</connection>
     <developerConnection>scm:git:https://github.com/openzipkin/brave-cassandra.git</developerConnection>
-    <tag>0.1.1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <!-- Developer section is needed for Maven Central, but doesn't need to include each person -->
