Updates to latest zipkin2 versions

--- a/cassandra/pom.xml
+++ b/cassandra/pom.xml
@@ -36,7 +36,7 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>io.zipkin.reporter</groupId>
+      <groupId>io.zipkin.reporter2</groupId>
       <artifactId>zipkin-sender-urlconnection</artifactId>
       <version>${zipkin-reporter.version}</version>
     </dependency>
