--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,8 @@
     <main.signature.artifact>java17</main.signature.artifact>
 
     <main.basedir>${project.basedir}</main.basedir>
-    <brave.version>4.7.0</brave.version>
-    <zipkin-reporter.version>1.1.0</zipkin-reporter.version>
+    <brave.version>4.8.0</brave.version>
+    <zipkin-reporter.version>2.0.0</zipkin-reporter.version>
 
     <license-maven-plugin.version>2.11</license-maven-plugin.version>
   </properties>
@@ -98,7 +98,7 @@
       <dependency>
         <groupId>org.apache.cassandra</groupId>
         <artifactId>cassandra-all</artifactId>
-        <version>3.10</version>
+        <version>3.11.0</version>
         <exclusions>
           <exclusion>
             <groupId>org.slf4j</groupId>
@@ -151,7 +151,7 @@
     <dependency>
       <groupId>com.google.auto.value</groupId>
       <artifactId>auto-value</artifactId>
-      <version>1.4.1</version>
+      <version>1.5</version>
       <scope>provided</scope>
     </dependency>
 
@@ -202,7 +202,7 @@
           <dependency>
             <groupId>com.google.errorprone</groupId>
             <artifactId>error_prone_core</artifactId>
-            <version>2.0.19</version>
+            <version>2.1.1</version>
           </dependency>
         </dependencies>
       </plugin>
@@ -219,6 +219,7 @@
             <configuration>
               <target>${main.java.version}</target>
               <fork>true</fork>
+              <quiet>true</quiet>
             </configuration>
           </execution>
         </executions>
@@ -227,7 +228,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>animal-sniffer-maven-plugin</artifactId>
-        <version>1.15</version>
+        <version>1.16</version>
         <configuration>
           <signature>
             <groupId>org.codehaus.mojo.signature</groupId>
