--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright 2017 The OpenZipkin Authors
+    Copyright 2017-2018 The OpenZipkin Authors
 
     Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
     in compliance with the License. You may obtain a copy of the License at
@@ -37,8 +37,8 @@
     <main.signature.artifact>java17</main.signature.artifact>
 
     <main.basedir>${project.basedir}</main.basedir>
-    <brave.version>4.8.0</brave.version>
-    <zipkin-reporter.version>2.0.0</zipkin-reporter.version>
+    <brave.version>4.14.1</brave.version>
+    <zipkin-reporter.version>2.3.1</zipkin-reporter.version>
 
     <license-maven-plugin.version>2.11</license-maven-plugin.version>
   </properties>
@@ -98,7 +98,7 @@
       <dependency>
         <groupId>org.apache.cassandra</groupId>
         <artifactId>cassandra-all</artifactId>
-        <version>3.11.0</version>
+        <version>3.11.1</version>
         <exclusions>
           <exclusion>
             <groupId>org.slf4j</groupId>
@@ -113,7 +113,7 @@
       <dependency>
         <groupId>com.datastax.cassandra</groupId>
         <artifactId>cassandra-driver-core</artifactId>
-        <version>3.3.0</version>
+        <version>3.4.0</version>
       </dependency>
       <dependency>
         <groupId>junit</groupId>
@@ -123,7 +123,7 @@
       <dependency>
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
-        <version>3.7.0</version>
+        <version>3.9.0</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -135,23 +135,20 @@
       <version>${brave.version}</version>
     </dependency>
 
-    <!--
-       For javax.annotation.ParametersAreNonnullByDefault and javax.annotation.Nullable
-       This is added as a root-level dependency to prevent javadoc from failing.
-       -->
+    <!-- to compile against Span.remoteEndpoint(zipkin.Span) -->
     <dependency>
-      <groupId>com.google.code.findbugs</groupId>
-      <artifactId>jsr305</artifactId>
-      <version>3.0.2</version>
-      <!-- eventhough annotations are runtime retention, we do not look them up reflectively -->
-      <scope>provided</scope>
+      <groupId>io.zipkin.java</groupId>
+      <artifactId>zipkin</artifactId>
+      <!-- version doesn't matter -->
+      <version>2.4.5</version>
+      <optional>true</optional>
     </dependency>
 
     <!-- don't worry. auto-* are source retention, not runtime -->
     <dependency>
       <groupId>com.google.auto.value</groupId>
       <artifactId>auto-value</artifactId>
-      <version>1.5</version>
+      <version>1.5.3</version>
       <scope>provided</scope>
     </dependency>
 
@@ -171,11 +168,11 @@
   <build>
     <pluginManagement>
       <plugins>
-        <!-- mvn -N io.takari:maven:wrapper -Dmaven=3.5.0 -->
+        <!-- mvn -N io.takari:maven:wrapper -Dmaven=3.5.2 -->
         <plugin>
           <groupId>io.takari</groupId>
           <artifactId>maven</artifactId>
-          <version>0.3.4</version>
+          <version>0.5.0</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -184,7 +181,7 @@
       <plugin>
         <inherited>true</inherited>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.6.1</version>
+        <version>3.7.0</version>
         <configuration>
           <!-- Retrolambda will rewrite lambdas as Java 6 bytecode -->
           <source>1.8</source>
@@ -202,7 +199,7 @@
           <dependency>
             <groupId>com.google.errorprone</groupId>
             <artifactId>error_prone_core</artifactId>
-            <version>2.1.1</version>
+            <version>2.2.0</version>
           </dependency>
         </dependencies>
       </plugin>
@@ -210,7 +207,7 @@
       <plugin>
         <groupId>net.orfjackal.retrolambda</groupId>
         <artifactId>retrolambda-maven-plugin</artifactId>
-        <version>2.5.1</version>
+        <version>2.5.3</version>
         <executions>
           <execution>
             <goals>
