--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,9 @@
     the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.zipkin.brave.cassandra</groupId>
@@ -37,8 +39,8 @@
     <main.signature.artifact>java17</main.signature.artifact>
 
     <main.basedir>${project.basedir}</main.basedir>
-    <brave.version>4.16.1</brave.version>
-    <zipkin-reporter.version>2.3.3</zipkin-reporter.version>
+    <brave.version>5.0.0</brave.version>
+    <zipkin-reporter.version>2.6.1</zipkin-reporter.version>
 
     <license-maven-plugin.version>2.11</license-maven-plugin.version>
   </properties>
@@ -64,7 +66,8 @@
   <scm>
     <url>https://github.com/openzipkin/brave-cassandra</url>
     <connection>scm:git:https://github.com/openzipkin/brave-cassandra.git</connection>
-    <developerConnection>scm:git:https://github.com/openzipkin/brave-cassandra.git</developerConnection>
+    <developerConnection>scm:git:https://github.com/openzipkin/brave-cassandra.git
+    </developerConnection>
     <tag>HEAD</tag>
   </scm>
 
@@ -98,7 +101,7 @@
       <dependency>
         <groupId>org.apache.cassandra</groupId>
         <artifactId>cassandra-all</artifactId>
-        <version>3.11.1</version>
+        <version>3.11.2</version>
         <exclusions>
           <exclusion>
             <groupId>org.slf4j</groupId>
@@ -113,7 +116,7 @@
       <dependency>
         <groupId>com.datastax.cassandra</groupId>
         <artifactId>cassandra-driver-core</artifactId>
-        <version>3.4.0</version>
+        <version>3.5.0</version>
       </dependency>
       <dependency>
         <groupId>junit</groupId>
@@ -123,7 +126,7 @@
       <dependency>
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
-        <version>3.9.0</version>
+        <version>3.10.0</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -135,20 +138,11 @@
       <version>${brave.version}</version>
     </dependency>
 
-    <!-- to compile against Span.remoteEndpoint(zipkin.Span) -->
-    <dependency>
-      <groupId>io.zipkin.java</groupId>
-      <artifactId>zipkin</artifactId>
-      <!-- version doesn't matter -->
-      <version>2.4.5</version>
-      <optional>true</optional>
-    </dependency>
-
     <!-- don't worry. auto-* are source retention, not runtime -->
     <dependency>
       <groupId>com.google.auto.value</groupId>
       <artifactId>auto-value</artifactId>
-      <version>1.5.3</version>
+      <version>1.5.4</version>
       <scope>provided</scope>
     </dependency>
 
@@ -168,11 +162,11 @@
   <build>
     <pluginManagement>
       <plugins>
-        <!-- mvn -N io.takari:maven:wrapper -Dmaven=3.5.2 -->
+        <!-- mvn -N io.takari:maven:wrapper -Dmaven=3.5.3 -->
         <plugin>
           <groupId>io.takari</groupId>
           <artifactId>maven</artifactId>
-          <version>0.5.0</version>
+          <version>0.6.0</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -194,12 +188,12 @@
           <dependency>
             <groupId>org.codehaus.plexus</groupId>
             <artifactId>plexus-compiler-javac-errorprone</artifactId>
-            <version>2.8.2</version>
+            <version>2.8.4</version>
           </dependency>
           <dependency>
             <groupId>com.google.errorprone</groupId>
             <artifactId>error_prone_core</artifactId>
-            <version>2.2.0</version>
+            <version>2.3.1</version>
           </dependency>
         </dependencies>
       </plugin>
@@ -257,6 +251,10 @@
         <version>${license-maven-plugin.version}</version>
         <configuration>
           <header>${main.basedir}/src/etc/header.txt</header>
+          <mapping>
+            <!-- Don't use javadoc style as this makes code formatters break it by adding tags! -->
+            <java>SLASHSTAR_STYLE</java>
+          </mapping>
           <excludes>
             <exclude>.travis.yml</exclude>
             <exclude>.gitignore</exclude>
@@ -331,13 +329,13 @@
 
           <plugin>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>2.10.4</version>
+            <version>3.0.0</version>
             <configuration>
               <failOnError>false</failOnError>
               <excludePackageNames>zipkin.cassandra.internal,zipkin.cassandra.internal.*
               </excludePackageNames>
               <!-- hush pedantic warnings: we don't put param and return on everything! -->
-              <additionalparam>-Xdoclint:none</additionalparam>
+              <doclint>none</doclint>
             </configuration>
             <executions>
               <execution>
