--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,9 @@
     <main.basedir>${project.basedir}</main.basedir>
     <brave.version>5.2.0</brave.version>
 
+    <!-- override to set exclusions per-project -->
+    <errorprone.args/>
+
     <license-maven-plugin.version>2.11</license-maven-plugin.version>
     <maven-failsafe-plugin.version>2.22.0</maven-failsafe-plugin.version>
   </properties>
