--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
   <groupId>io.zipkin.brave.cassandra</groupId>
   <artifactId>brave-cassandra-parent</artifactId>
-  <version>0.8.2-SNAPSHOT</version>
+  <version>0.9.0</version>
   <packaging>pom</packaging>
 
   <modules>
@@ -40,7 +40,7 @@
     <brave.version>5.2.0</brave.version>
 
     <!-- override to set exclusions per-project -->
-    <errorprone.args/>
+    <errorprone.args />
 
     <license-maven-plugin.version>2.11</license-maven-plugin.version>
     <maven-failsafe-plugin.version>2.22.0</maven-failsafe-plugin.version>
@@ -69,7 +69,7 @@
     <connection>scm:git:https://github.com/openzipkin/brave-cassandra.git</connection>
     <developerConnection>scm:git:https://github.com/openzipkin/brave-cassandra.git
     </developerConnection>
-    <tag>HEAD</tag>
+    <tag>0.9.0</tag>
   </scm>
 
   <!-- Developer section is needed for Maven Central, but doesn't need to include each person -->
