--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
   <groupId>io.zipkin.brave.cassandra</groupId>
   <artifactId>brave-cassandra-parent</artifactId>
-  <version>0.10.1-SNAPSHOT</version>
+  <version>0.10.1</version>
   <packaging>pom</packaging>
 
   <modules>
@@ -70,7 +70,7 @@
     <connection>scm:git:https://github.com/openzipkin/brave-cassandra.git</connection>
     <developerConnection>scm:git:https://github.com/openzipkin/brave-cassandra.git
     </developerConnection>
-    <tag>HEAD</tag>
+    <tag>0.10.1</tag>
   </scm>
 
   <!-- Developer section is needed for Maven Central, but doesn't need to include each person -->
