--- a/cassandra-tests/pom.xml
+++ b/cassandra-tests/pom.xml
@@ -18,7 +18,7 @@
   <parent>
     <groupId>io.zipkin.brave.cassandra</groupId>
     <artifactId>brave-cassandra-parent</artifactId>
-    <version>0.10.1</version>
+    <version>0.10.2-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
