trying to get DEPENDENCIES file

--- a/cassandra-tests/pom.xml
+++ b/cassandra-tests/pom.xml
@@ -52,6 +52,13 @@
   <build>
     <plugins>
       <plugin>
+        <artifactId>maven-remote-resources-plugin</artifactId>
+        <configuration>
+          <skip>false</skip>
+        </configuration>
+      </plugin>
+
+      <plugin>
         <groupId>net.orfjackal.retrolambda</groupId>
         <artifactId>retrolambda-maven-plugin</artifactId>
         <executions>
