--- a/cassandra-driver/pom.xml
+++ b/cassandra-driver/pom.xml
@@ -33,6 +33,7 @@
     <dependency>
       <groupId>com.datastax.cassandra</groupId>
       <artifactId>cassandra-driver-core</artifactId>
+      <version>${cassandra-driver-core.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
